--- a/godtools/en.lproj/Localizable.strings
+++ b/godtools/en.lproj/Localizable.strings
@@ -16,13 +16,13 @@
 "GTSettings_parallelLanguage_label"     = "Parallel Language*:";
 "GTSettings_parallelLanguage_default"   = "None";
 "GTSettings_languageInstructions"       = "You can select a primary and parallel language that you can switch to at any time";
-"GTSettings_previewModeInstructions"    = "If you are a GodTools translator wanting to see your latest translations, enable Preview Mode";
-"GTSettings_parallelModeInstructions"   = "*If you are interacting with someone who has a different native language than yours, select it here then tap the [] button in the booklet to switch between the two languages.";
-"GTSettings_previewMode_label"          = "Preview Mode";
+"GTSettings_previewModeInstructions"    = "If you are a God Tools translator wanting to see your latest translations, enable Preview Mode";
+"GTSettings_parallelModeInstructions"   = "*Tap screen during presentation to change language.";
+"GTSettings_previewMode_label"          = "Preview Mode (translators)";
 "GTSettings_aboutGodTools"              = "About God Tools";
 
 
-"GTHome_status_updatingResources"       = "Updating %@ resources...";
+"GTHome_status_updatingResources"       = "Updating resources...";
 "GTHome_status_updatingDrafts"          = "Updating drafts...";
 "GTHome_status_creatingDrafts"          = "Creating draft...";
 "GTHome_status_publishingDrafts"        = "Publishing draft...";
