embed toggle icon in a functionless button for proper layout of instructions

--- a/godtools/en.lproj/Localizable.strings
+++ b/godtools/en.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "GTSettings_parallelLanguage_default"   = "None";
 "GTSettings_languageInstructions"       = "You can select a primary and parallel language that you can switch to at any time";
 "GTSettings_previewModeInstructions"    = "If you are a God Tools translator wanting to see your latest translations, enable Preview Mode";
-"GTSettings_parallelModeInstructions"   = "*Tap screen during presentation to change language.";
+"GTSettings_parallelModeInstructions"   = "*Tap screen during presentation and use icon to toggle language.";
 "GTSettings_previewMode_label"          = "Preview Mode (translators)";
 "GTSettings_aboutGodTools"              = "About God Tools";
 
