moved GTHomeView UI and logic to GTHomeViewController to centralize all translatable elements of the app. Also fixed some layout issues on the home screen while I was there.

--- a/godtools/en.lproj/Main.strings
+++ b/godtools/en.lproj/Main.strings
@@ -1,12 +1,21 @@
 
+/* Class = "UILabel"; text = "God Tools"; ObjectID = "43O-9q-s8R"; */
+"43O-9q-s8R.text" = "God Tools";
+
 /* Class = "UILabel"; text = "The toggle button will not show up in the menu if the booklet is not available in the parallel language"; ObjectID = "5lB-eD-M5X"; */
 "5lB-eD-M5X.text" = "The toggle button will not show up in the menu if the booklet is not available in the parallel language";
 
-/* Class = "UITextField"; placeholder = "   Passcode"; ObjectID = "DPa-cg-wGX"; */
-"DPa-cg-wGX.placeholder" = "   Passcode";
+/* Class = "UITextField"; placeholder = "Passcode"; ObjectID = "DPa-cg-wGX"; */
+"DPa-cg-wGX.placeholder" = "Passcode";
 
-/* Class = "UILabel"; text = "Tap screen during presentation to view menu."; ObjectID = "O3d-nf-ctT"; */
+/* Class = "UILabel"; text = "[ Translator Mode ]"; ObjectID = "Ddm-Sv-WQm"; */
+"Ddm-Sv-WQm.text" = "[ Translator Mode ]";
+
+/* Class = "UILabel"; text = "*Tap screen during presentation to view menu."; ObjectID = "O3d-nf-ctT"; */
 "O3d-nf-ctT.text" = "*Tap screen during presentation to view menu.";
+
+/* Class = "UILabel"; text = "pull to refresh drafts"; ObjectID = "f2w-cw-tln"; */
+"f2w-cw-tln.text" = "pull to refresh drafts";
 
 /* Class = "UILabel"; text = "Will toggle the 2 languages"; ObjectID = "loZ-lY-U87"; */
 "loZ-lY-U87.text" = "Will toggle the 2 languages";
