made introductory instructions translatable

--- a/godtools/en.lproj/Main.strings
+++ b/godtools/en.lproj/Main.strings
@@ -14,6 +14,12 @@
 /* Class = "UILabel"; text = "*Tap screen during presentation to view menu."; ObjectID = "O3d-nf-ctT"; */
 "O3d-nf-ctT.text" = "*Tap screen during presentation to view menu.";
 
+/* Class = "UILabel"; text = "Pick a tool"; ObjectID = "P4W-0o-rM1"; */
+"P4W-0o-rM1.text" = "Pick a tool";
+
+/* Class = "UILabel"; text = "Pick a Language"; ObjectID = "Srq-de-tee"; */
+"Srq-de-tee.text" = "Pick a Language";
+
 /* Class = "UILabel"; text = "pull to refresh drafts"; ObjectID = "f2w-cw-tln"; */
 "f2w-cw-tln.text" = "pull to refresh drafts";
 
