--- a/godtools/Base.lproj/Localizable.strings
+++ b/godtools/Base.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 
 
 "GTSettings_mainLanguage_label"                                  = "Main Language:";
-"GTSettings_parallelLanguage_label"                              = "Parallel Language*:";
+"GTSettings_parallelLanguage_label"                              = "Parallel Language:";
 "GTSettings_parallelLanguage_default"                            = "None";
 "GTSettings_languageInstructions"                                = "You can select a primary and parallel language that you can switch to at any time";
 "GTSettings_previewModeInstructions"                             = "If you are a God Tools translator wanting to see your latest translations, enable Preview Mode";
