--- a/godtools/en.lproj/Main.strings
+++ b/godtools/en.lproj/Main.strings
@@ -11,7 +11,7 @@
 /* Class = "UILabel"; text = "[ Translator Mode ]"; ObjectID = "Ddm-Sv-WQm"; */
 "Ddm-Sv-WQm.text" = "[ Translator Mode ]";
 
-/* Class = "UILabel"; text = "*Tap screen during presentation to view menu."; ObjectID = "O3d-nf-ctT"; */
+/* Class = "UILabel"; text = "Tap screen during presentation to view menu."; ObjectID = "O3d-nf-ctT"; */
 "O3d-nf-ctT.text" = "Tap screen during presentation to view menu.";
 
 /* Class = "UILabel"; text = "Pick a tool"; ObjectID = "P4W-0o-rM1"; */
