--- a/godtools/en.lproj/Localizable.strings
+++ b/godtools/en.lproj/Localizable.strings
@@ -6,64 +6,71 @@
   Copyright (c) 2014 Michael Harrison. All rights reserved.
 */
 
-"menu_download_bad_xml"                          = "Data was missing when asking the server for menu information.";
-"packages_download_error"                          = "There was an error downloading the packages";
-"page_download_error"                              = "There was an error downloading the page";
-"server_error"          = "There were server issues encountered";
-"invalid_code" = "Invalid access code";
+"app_name"                                   = "God Tools";
+
+"translator_mode"                            = "[ Translator Mode ]";
+"intro_share_instructions"                   = "Share with a friend";
+"intro_tool_instructions"                    = "Pick a tool";
+"intro_language_instructions"                = "Pick a Language";
+"pull_down_info"                             = "pull to refresh drafts";
+
+"settings_title"                             = "Settings";
+"settings_language_none_selected"            = "None Selected";
+"settings_parallel_info_tap"                 = "Tap screen during presentation to view menu.";
+"settings_parallel_info_switch_button"       = "Will toggle the 2 languages";
+"settings_parallel_info_toggle_explaination" = "The toggle button will not show up in the menu if the booklet is not available in the parallel language";
+"settings_main_language"                     = "Main Language:";
+"settings_parallel_language"                 = "Parallel Language:";
+"settings_translator_mode"                   = "Preview Mode (translators)";
+"dialog_translator_mode_title"               = "Exit Preview Mode?";
+"dialog_translator_mode_body"                = "Drafts will not be displayed";
+
+"menu_item_languages"                        = "Language";
+"download"                                   = "Download";
+"cancel"                                     = "Cancel";
+"internet_needed"                            = "You need to be online to proceed";
 
 
-"settings_main_language"                                  = "Main Language:";
-"settings_parallel_language"                              = "Parallel Language:";
-"settings_translator_mode"                                   = "Preview Mode (translators)";
-"dialog_translator_mode_title"                               = "Exit Preview Mode?";
-"dialog_translator_mode_body"                             = "Drafts will not be displayed";
-"no"                       = "No";
-"yes"                       = "Yes";
-"settings_title"                                 = "Settings";
-"settings_language_none_selected"                 = "None Selected";
+"dialog_access_code_title"                   = "Enter Access Code:";
+"access_code_placeholder"                    = "Passcode";
+"authenticate_code"                          = "Authenticating access code";
+"translator_enabled"                         = "Translator preview mode is enabled";
 
 
-"menu_item_languages"                                     = "Language";
-"download"                                = "Download";
-"cancel"                                  = "Cancel";
-"internet_needed"                = "You need to be online to proceed";
+"status_updating_resources"                  = "Updating resources...";
+"status_updating_drafts"                     = "Updating drafts...";
+"status_creating_drafts"                     = "Creating draft...";
+"status_publishing_drafts"                   = "Publishing draft...";
+"status_updating_menu"                       = "Updating menu...";
+"status_checking_for_updates"                = "Checking for Updates...";
+"status_initial_setup"                       = "Initial Setup...";
+"status_downloading_resources"               = "Downloading Resources...";
+"language_alert_title"                       = "Language Settings";
+"language_alert_body"                        = "Would you like to make %@ the default language?";
+"draft_publish_confirm"                      = "Yes, it's ready!";
+"draft_publish_negative"                     = "No, not yet.";
+"draft_publish_message"                      = "Do you want to publish this draft?";
+"draft_start_message"                        = "Create new draft?";
+"share_from_page_subject"                    = "God Tools";
+"share_from_page_message"                    = "Here is the booklet we were looking at today. This link, %@, should take you to the page we were last looking at.";
+"share_general_subject"                      = "God Tools";
+"share_general_message"                      = "Check out this %@";
 
 
-"authenticate_code"      = "Authenticating access code";
-"translator_enabled"  = "Translator preview mode is enabled";
+"draft_refresh_message"                      = "Refreshing draft...";
+"draft_refresh_error"                        = "Refresh failure";
 
 
-"status_updating_resources"                                = "Updating resources...";
-"status_updating_drafts"                                   = "Updating drafts...";
-"status_creating_drafts"                                   = "Creating draft...";
-"status_publishing_drafts"                                 = "Publishing draft...";
-"status_updating_menu"                                     = "Updating menu...";
-"status_checking_for_updates"                               = "Checking for Updates...";
-"status_initial_setup"                                     = "Initial Setup...";
-"language_alert_title"                                     = "Language Settings";
-"language_alert_body"                                   = "Would you like to make %@ the default language?";
-"draft_publish_confirm"                               = "Yes, it's ready!";
-"draft_publish_negative"                               = "No, not yet.";
-"draft_publish_message"                                     = "Do you want to publish this draft?";
-"draft_start_message"                                = "Create new draft?";
-"share_from_page_subject"                           = "God Tools";
-"share_from_page_message"                           = "Here is the booklet we were looking at today. This link, %@, should take you to the page we were last looking at.";
-"share_general_subject"                            = "God Tools";
-"share_general_message"                            = "Check out this %@";
+"everystudent_title"                         = "Topics";
 
+"error_title"                                = "Error";
+"menu_download_bad_xml"                      = "Data was missing when asking the server for menu information.";
+"packages_download_error"                    = "There was an error downloading the packages";
+"page_download_error"                        = "There was an error downloading the page";
+"server_error"                               = "There were server issues encountered";
+"invalid_code"                               = "Invalid access code";
+"initial_setup_error_message"                = "Unfortunately we could not load any resources. Please quit the app and reopen. If the problem persists contact support@godtoolsapp.com";
 
-"draft_refresh_message"                     = "Refreshing draft...";
-"draft_refresh_error"      = "Refresh failure";
-
-
-"everystudent_title"                                           = "Topics";
-
-
-"error_title"                                      = "Error";
-"ok"                              = "OK";
-
-
-"initial_setup_error_message"                            = "Unfortunately we could not load any resources. Please quit the app and reopen. If the problem persists contact support@godtoolsapp.com";
-
-"status_downloading_resources"                   = "Downloading Resources...";
+"no"                                         = "No";
+"yes"                                        = "Yes";
+"ok"                                         = "OK";
