added alerts for update completion

--- a/godtools/en.lproj/Localizable.strings
+++ b/godtools/en.lproj/Localizable.strings
@@ -170,6 +170,10 @@ Let’s talk more!";
 "initial_setup_error_message" = "Unfortunately we could not load any resources. Please quit the app and reopen. If the problem persists contact support@godtoolsapp.com";
 "new_updates_available_title" = "New updates available";
 "new_updates_available_body" = "Would you like to download the {{number_of_updates}} latest updates to your God Tools resources?";
+"new_updates_completed_title" = "Updates Completed";
+"new_updates_completed_body" = "Your God Tools resources were successfully updated.";
+"new_updates_failed_title" = "Updates Failed";
+"new_updates_failed_body" = "Unfortunately we were unable to update your resources. Try again later.";
 "update_all" = "Update All";
 "one_language_at_a_time_title" = "Sorry";
 "one_language_at_a_time_body" = "We you can't download more than one at a time";
